[project]
name = "c3-docs"
version = "0.1.0"
description = "C3 Programming Language Documentation"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "mike>=2.2.0",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.21.2",
]


[tool.uv]
managed = true
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
